--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@
 # Log file
 *.log
 
-# BlueJ files
-*.ctxt
+# IntelliJ files
+/.idea
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -18,6 +18,10 @@
 *.zip
 *.tar.gz
 *.rar
+/target
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
+
